--- a/src/styles/common/forms.scss
+++ b/src/styles/common/forms.scss
@@ -14,8 +14,8 @@
   position: absolute;
   bottom: 0;
   padding: 2px 0;
-  font-size: 10px;
-  line-height: 0.8em;
+  font-size: 12px;
+  line-height: 1em;
   color: var(--ion-color-danger);
 }
 
